--- a/BookExchange/wwwroot/css/BookIndex.css
+++ b/BookExchange/wwwroot/css/BookIndex.css
@@ -1,15 +1,25 @@
-﻿.main {
+﻿* {
+    --fontGrowth: .8vh;
+}
+
+.main {
     border-radius: 15px;
     background-color: #F1F1F1;
     width: 100%;
-    height: 100%;
+    max-height: 83vh;
+    margin-top: 2vh;
     overflow: auto;
+    overflow-y: hidden;
     position: relative;
     padding-bottom: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .container {
     max-width: max-content !important;
+    height: 83vh;
 }
 
 .card {
@@ -19,8 +29,8 @@
     border-radius: 10px;
     position: relative;
     top: 10%;
-    margin-top: 20px;
-    margin-bottom: 10px;
+    margin-top: 2vh;
+    margin-bottom: 1vh;
     margin-left: 15px;
     margin-right: 15px;
     transition-duration: 0.4s;
@@ -96,9 +106,8 @@
     width: 80%;
     border-radius: 10px;
     position: relative;
-    top: 10%;
     margin: auto;
-    margin-top: 20px;
+    margin-top: 2vh;
     margin-bottom: 10px;
     transition-duration: 0.4s;
     justify-content: center;
