--- a/BookExchange/wwwroot/css/CreateISBN.css
+++ b/BookExchange/wwwroot/css/CreateISBN.css
@@ -4,26 +4,39 @@
     overflow: auto;
 }
 
-#page {
-    height: 866px;
+#c1 {
+    position: relative;
+    margin-top: 10vh;
+    width: 50rem;
+    height: 60vh;
 }
 
-#c1 {
-    position: absolute;
-    top: 15%;
-    height: 60%;
-    width: max-content;
+html {
+    font-size: inherit;
+}
+
+.container {
+    max-width: max-content !important;
 }
 
 .w3-btn {
     color: #fff !important;
     background-color: #0D6EFF !important;
     border-color: #0d6efd !important;
+    margin: 15px;
 }
 
 #c2 {
-    height: 125px;
-    width: 800px;
+    height: 6rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+}
+
+.row {
+    margin-top: 8vh;
 }
 
 #input {
@@ -57,20 +70,12 @@
 }
 
 #text {
-    position: absolute;
+    position: relative;
     top: 40px;
     border-bottom: 1px solid #ccc;
 }
 
-html {
-    font-size: 14px;
-}
-
-html {
-    position: relative;
-    min-height: 100%;
-}
-
 body {
-    margin-bottom: 60px;
+    font-family: var(--bs-font-sans-serif);
+    font-size: inherit;
 }
