--- a/BookExchange/Views/Books/Create.cshtml
+++ b/BookExchange/Views/Books/Create.cshtml
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="~/css/BookCreate.css" asp-append-version="true" />
+    <script src="~/js/BookCreate.js"></script>
 </head>
 
 <body>
@@ -19,41 +20,57 @@
                 <h2 id="text">Confirm or Edit book information</h2>
             </div>
 
-            <div class="row">
-                <div class="col-md-4">
-                    <form asp-action="Create">
-                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        <div class="form-group w3-input w3-margin">
-                            <label asp-for="Title" class="control-label"></label>
-                            <input asp-for="Title" class="form-control" />
-                            <span asp-validation-for="Title" class="text-danger"></span>
-                        </div>
-                        <div class="form-group w3-input w3-margin">
-                            <label asp-for="Author" class="control-label"></label>
-                            <input asp-for="Author" class="form-control" />
-                            <span asp-validation-for="Author" class="text-danger"></span>
-                        </div>
-                        <div class="form-group w3-input w3-margin">
-                            <label asp-for="Description" class="control-label"></label>
-                            <input asp-for="Description" class="form-control" />
-                            <span asp-validation-for="Description" class="text-danger"></span>
-                        </div>
-                        <div class="form-group w3-input w3-margin">
-                            <label asp-for="Published" class="control-label"></label>
-                            <input asp-for="Published" class="form-control" />
-                            <span asp-validation-for="Published" class="text-danger"></span>
-                        </div>
-                        <div class="form-group w3-input w3-margin">
-                            <label asp-for="ISBN" class="control-label"></label>
-                            <input asp-for="ISBN" class="form-control" />
-                            <span asp-validation-for="ISBN" class="text-danger"></span>
-                        </div>
-                        <div class="form-group LoanSubmit">
-                            <input type="submit" value="Create" class="w3-btn w3-round btn" />
-                        </div>
-                    </form>
+            <form asp-action="Create">
+                <div class="CreationGrid">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group w3-input w3-margin">
+                        <label asp-for="Title" class="control-label required"></label>
+                        <input asp-for="Title" class="form-control" autocomplete="off" />
+                        <span asp-validation-for="Title" class="text-danger"></span>
+                    </div>
+                    <div class="form-group w3-input w3-margin">
+                        <label asp-for="Subtitle" class="control-label"></label>
+                        <input asp-for="Subtitle" class="form-control" autocomplete="off" />
+                        <span asp-validation-for="Subtitle" class="text-danger"></span>
+                    </div>
+                    <div class="form-group w3-input w3-margin">
+                        <label asp-for="Author" class="control-label required"></label>
+                        <input asp-for="Author" class="form-control" autocomplete="off" />
+                        <span asp-validation-for="Author" class="text-danger"></span>
+                    </div>
+                    <div class="form-group w3-input w3-margin">
+                        <label asp-for="Published" class="control-label"></label>
+                        <input asp-for="Published" class="form-control" autocomplete="off" />
+                        <span asp-validation-for="Published" class="text-danger"></span>
+                    </div>
+                    <div class="form-group w3-input w3-margin desc">
+                        <label asp-for="Description" class="control-label"></label>
+                        <textarea asp-for="Description" class="form-control" autocomplete="off"></textarea>
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+                    <div class="form-group w3-input w3-margin classChoice">
+                        <label asp-for="ClassIds" class="control-label"></label>
+                        <select class="chzn-select" data-placeholder="Choose a Class..." multiple
+                                asp-for="ClassIds"
+                                asp-items="@ViewBag.ClassItems as List<SelectListItem>">
+                        </select>
+                    </div>
+                    <div class="form-group w3-input w3-margin">
+                        <label asp-for="ISBN13" class="control-label required"></label>
+                        <input asp-for="ISBN13" class="form-control" autocomplete="off" />
+                        <span asp-validation-for="ISBN13" class="text-danger"></span>
+                    </div>
+                    <div class="form-group w3-input w3-margin">
+                        <label asp-for="ISBN10" class="control-label required"></label>
+                        <input asp-for="ISBN10" class="form-control" autocomplete="off" />
+                        <span asp-validation-for="ISBN10" class="text-danger"></span>
+                    </div>
                 </div>
-            </div>
+                <div class="form-group LoanSubmit">
+                    <input type="submit" value="Create" class="w3-btn w3-round btn" />
+                </div>
+            </form>
+
         </div>
     </div>
 </body>
