--- a/BookExchange/wwwroot/css/BookCreate.css
+++ b/BookExchange/wwwroot/css/BookCreate.css
@@ -46,11 +46,33 @@ html {
 
 .LoanSubmit {
     position: relative;
-    left: 40%;
+    width: min-content;
+    left: 42%;
+    padding: 10px;
+    padding-bottom: 25px;
+}
+
+.chosen-choices {
+    display: block;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-clip: padding-box;
+    border: 1px solid #ced4da !important;
+    background-image: none !important;
+    appearance: none;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    padding: 0.375rem 0.75rem !important;
+}
+
+.desc textarea {
+    height: 10vh;
 }
 
 .w3-input {
     border-bottom: 0px !important;
+    width: auto !important;
 }
 
 #submitBtn {
@@ -63,10 +85,26 @@ html {
     color: white;
 }
 
+.w3-margin {
+    margin: 10px !important;
+}
+
+.isbn {
+    margin-left: 25% !important;
+    margin-right: 25% !important;
+}
+
 #text {
     position: relative;
     top: 40px;
     border-bottom: 1px solid #ccc;
+}
+
+.CreationGrid {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 body {
