--- a/BookExchange/Views/Books/CreateISBN.cshtml
+++ b/BookExchange/Views/Books/CreateISBN.cshtml
@@ -1,4 +1,4 @@
-﻿@model BookExchange.Models.Book
+﻿@model BookExchange.Models.ISBNdata
 
 @{
     ViewData["Title"] = "CreateISBN";
@@ -16,17 +16,24 @@
     <div id="page">
         <div id="c1" class="w3-card w3-light-gray w3-round">
             <div id="c2" class="w3-container w3-light-gray w3-">
-                <h2 id="text">Enter the isbn number for the book you would like to add</h2>
+                <h2 id="text">Enter the ISBN number for the book you would like to add</h2>
             </div>
-
+            
             <div class="row">
                 <div class="col-md-4">
-                    <form asp-action="CreateISBN">
+                    <form asp-action="CreateISBN" method="post">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-group w3-input w3-margin">
-                            <label asp-for="ISBN" class="control-label"></label>
-                            <input asp-for="ISBN" class="form-control" />
+                            <label asp-for="ISBN" class="control-label required"></label>
+                            <input asp-for="ISBN" class="form-control" autocomplete="off" />
                             <span asp-validation-for="ISBN" class="text-danger"></span>
+                            @if (ViewBag.Error == 1)
+                            {
+                                <br />
+                                <a asp-action="Create">
+                                    Click here to manually create new book.
+                                </a>
+                            }
                         </div>
                         <div class="form-group LoanSubmit">
                             <input type="submit" value="Search" class="w3-btn w3-round btn" />
