--- a/BookExchange/Views/Books/Delete.cshtml
+++ b/BookExchange/Views/Books/Delete.cshtml
@@ -36,10 +36,16 @@
             @Html.DisplayFor(model => model.Published)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ISBN)
+            @Html.DisplayNameFor(model => model.ISBN13)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ISBN)
+            @Html.DisplayFor(model => model.ISBN13)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ISBN10)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ISBN10)
         </dd>
     </dl>
     
