--- a/BookExchange/Views/Books/Details.cshtml
+++ b/BookExchange/Views/Books/Details.cshtml
@@ -23,6 +23,12 @@
                     @Html.DisplayFor(model => model.Title)
                 </dd>
                 <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Subtitle)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Subtitle)
+                </dd>
+                <dt class="col-sm-2">
                     @Html.DisplayNameFor(model => model.Author)
                 </dt>
                 <dd class="col-sm-10">
@@ -41,18 +47,41 @@
                     @Html.DisplayFor(model => model.Published)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.ISBN)
+                    @Html.DisplayNameFor(model => model.ISBN13)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.ISBN)
+                    @Html.DisplayFor(model => model.ISBN13)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.ISBN10)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.ISBN10)
+                </dd>
+                <dt class="col-sm-2">
+                    Classes
+                </dt>
+                <dd class="col-sm-10">
+                    @foreach (var clap in ViewBag.Classes)
+                    {
+                        <div class="classItem">
+                            @clap.Name
+                            <span class="tooltiptext">
+                                Grade: @clap.Grade
+                                <br />
+                                Teacher: @clap.Teacher
+                            </span>
+                        </div>
+                    }
                 </dd>
             </dl>
         </div>
 
         <div class="ActionContainer">
-            <a class="button" asp-action="Edit" asp-route-id="@Model?.BookID">Edit</a>
-            <a class="button" asp-controller="Loans" asp-action="Create" asp-route-ISBN="@Model?.ISBN">Donate</a>
-            <a class="button" asp-area="" asp-route-searchString="@Model?.ISBN" asp-controller="Loans" asp-action="Page">Acquire</a>
+            <a class="button" asp-action="Edit" asp-route-ISBN="@Model?.BookID">Edit</a>
+            <a class="button" asp-action="Delete" asp-route-ISBN="@Model?.BookID">Delete</a>
+            <a class="button" asp-controller="Loans" asp-action="Create" asp-route-ISBN="@Model?.ISBN13">Donate</a>
+            <a class="button" asp-area="" asp-route-searchString="@Model?.ISBN13" asp-controller="Loans" asp-action="Page">Acquire</a>
         </div>
     </div>
 
