--- a/BookExchange/Views/Books/Edit.cshtml
+++ b/BookExchange/Views/Books/Edit.cshtml
@@ -26,28 +26,33 @@
                         <input type="hidden" asp-for="BookID" />
                         <div class="form-group w3-input w3-margin">
                             <label asp-for="Title" class="control-label"></label>
-                            <input asp-for="Title" class="form-control" />
+                            <input asp-for="Title" class="form-control" autocomplete="off" />
                             <span asp-validation-for="Title" class="text-danger"></span>
                         </div>
                         <div class="form-group w3-input w3-margin">
                             <label asp-for="Author" class="control-label"></label>
-                            <input asp-for="Author" class="form-control" />
+                            <input asp-for="Author" class="form-control" autocomplete="off"/>
                             <span asp-validation-for="Author" class="text-danger"></span>
                         </div>
                         <div class="form-group w3-input w3-margin">
                             <label asp-for="Description" class="control-label"></label>
-                            <input asp-for="Description" class="form-control" />
+                            <input asp-for="Description" class="form-control" autocomplete="off" />
                             <span asp-validation-for="Description" class="text-danger"></span>
                         </div>
                         <div class="form-group w3-input w3-margin">
                             <label asp-for="Published" class="control-label"></label>
-                            <input asp-for="Published" class="form-control" />
+                            <input asp-for="Published" class="form-control" autocomplete="off" />
                             <span asp-validation-for="Published" class="text-danger"></span>
                         </div>
                         <div class="form-group w3-input w3-margin">
-                            <label asp-for="ISBN" class="control-label"></label>
-                            <input asp-for="ISBN" class="form-control" />
-                            <span asp-validation-for="ISBN" class="text-danger"></span>
+                            <label asp-for="ISBN13" class="control-label"></label>
+                            <input asp-for="ISBN13" class="form-control" autocomplete="off" />
+                            <span asp-validation-for="ISBN13" class="text-danger"></span>
+                        </div>
+                        <div class="form-group w3-input w3-margin">
+                            <label asp-for="ISBN10" class="control-label"></label>
+                            <input asp-for="ISBN10" class="form-control" autocomplete="off" />
+                            <span asp-validation-for="ISBN10" class="text-danger"></span>
                         </div>
                         <div class="form-group LoanSubmit">
                             <input type="submit" value="Confirm" class="w3-btn w3-round btn" />
