--- a/BookExchange/Views/Loans/Create.cshtml
+++ b/BookExchange/Views/Loans/Create.cshtml
@@ -24,18 +24,23 @@
                     <form asp-action="Create">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-group w3-input w3-margin">
-                            <label asp-for="LoanerName" class="control-label"></label>
-                            <input asp-for="LoanerName" class="form-control" />
+                            <label asp-for="LoanerName" class="control-label required"></label>
+                            <input asp-for="LoanerName" class="form-control" autocomplete="off" />
                             <span asp-validation-for="LoanerName" class="text-danger"></span>
                         </div>
                         <div class="form-group w3-input w3-margin">
-                            <label asp-for="LoanerEmail" class="control-label"></label>
-                            <input asp-for="LoanerEmail" class="form-control" />
+                            <label asp-for="LoanerEmail" class="control-label required"></label>
+                            <input asp-for="LoanerEmail" class="form-control" autocomplete="off"/>
                             <span asp-validation-for="LoanerEmail" class="text-danger"></span>
                         </div>
                         <div class="form-group w3-input w3-margin">
-                            <label asp-for="ISBN" class="control-label"></label>
-                            <input asp-for="ISBN" class="form-control" />
+                            <label asp-for="LoanerPhone" class="control-label"></label>
+                            <input asp-for="LoanerPhone" class="form-control" autocomplete="off" />
+                            <span asp-validation-for="LoanerPhone" class="text-danger"></span>
+                        </div>
+                        <div class="form-group w3-input w3-margin">
+                            <label asp-for="ISBN" class="control-label required"></label>
+                            <input asp-for="ISBN" class="form-control" autocomplete="off" />
                             <span asp-validation-for="ISBN" class="text-danger"></span>
                         </div>
                         <div class="form-group LoanSubmit">
