--- a/BookExchange/Views/Shared/_Layout.cshtml
+++ b/BookExchange/Views/Shared/_Layout.cshtml
@@ -63,6 +63,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/lib/chosen/chosen.jquery.js" asp-append-version="true"></script>
+    <link rel="stylesheet" href="~/lib/chosen/chosen.css" asp-append-version="true" />
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
