--- a/BookExchange/wwwroot/css/BookIndex.css
+++ b/BookExchange/wwwroot/css/BookIndex.css
@@ -2,10 +2,13 @@
     --fontGrowth: .8vh;
 }
 
+/* Main Container */
+
 .main {
     border-radius: 15px;
     background-color: #F1F1F1;
-    width: 100%;
+    width: 90vw;
+    height: 90vh;
     max-height: 83vh;
     margin-top: 2vh;
     overflow: auto;
@@ -21,6 +24,13 @@
     max-width: max-content !important;
     height: 83vh;
 }
+
+.horizontalScroll {
+    overflow: auto;
+    height: 100%;
+}
+
+/* Book Card */
 
 .card {
     background-color: rgb(211, 209, 209);
@@ -58,6 +68,28 @@
 .bookInfo {
     width: 100%;
 }
+.bookInfo p:first-of-type {
+    margin-bottom: 0;
+}
+
+.ISBN {
+    font-size: .9rem;
+}
+.bookTitle {
+    margin-bottom: 0;
+}
+.bookSubtitle {
+    margin-bottom: 0;
+    color: #0000008c;
+}
+.titleContainer {
+    margin-bottom: 0.5rem;
+}
+p {
+    margin-bottom: 0.5rem;
+}
+
+/* Search bar */
 
 .button {
     transition-duration: 0.2s;
@@ -81,6 +113,7 @@
     }
 
 .SearchButton {
+    width: 10%;
     border-radius: 15px;
     transition-duration: 0.2s;
     font-family: 'Poppins', sans-serif;
@@ -135,6 +168,8 @@
     outline: none;
 }
 
+/* Page Control */
+
 .pagination {
     width: 100%;
     text-align: center;
@@ -178,3 +213,71 @@
             border-top-right-radius: 5px;
             border-bottom-right-radius: 5px;
         }
+
+/* Dropdown Menu */
+
+/* Style The Dropdown Button */
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 15px;
+    transition-duration: 0.2s;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 5px 10px;
+    margin-left: 15px;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+    width: 15%;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    left: 0;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+    /* Links inside the dropdown */
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+        /* Change color of dropdown links on hover */
+        .dropdown-content a:hover {
+            background-color: #f1f1f1
+        }
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .out {
+    display: block !important;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
+
+.innerDropdown {
+    display: grid;
+}
+
+.innerDropdown .dropdown-content{
+    left: 100%;
+}
